# eye-tracking

./: .gitignore  AGENTS.md  README.md  eye-project.lnk  package-lock.json  package.json  tsconfig.json  ui.config.json  vite.config.ts
scripts/: check_self_aoi.py  db_inspect.py  explore_db.py  migrate_self_aoi.py  remove_jason_rows.py  setup_qac_table.py  tmp_dbq.out  tmp_dbq.py  tmp_q.py
src/: App.css  App.tsx  api.ts  index.tsx
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.txt  lib.rs  lib.rs.bak  main.rs
src/components/: AverageGazePointsChart.tsx  GazeHeatmapChart.tsx  GazeOverTimeChart.tsx  TestComponent.tsx  app-sidebar.tsx  catalog-compare-with-skiplist.tsx.bak  catalog-compare.tsx  gaze-analysis.tsx  not-found.tsx
src/components/ui/: button.tsx  card.tsx  charts.tsx  global-loading-bar.tsx  global-loading-overlay.tsx  json-viewer.tsx  label.tsx  markdown.tsx  progress.tsx  route-loading.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  table.tsx  tabs.tsx  text-field.tsx  tooltip.tsx
src/features/advanced/: analysis.ts  index.ts
src/features/catalog/: constants.ts  index.ts  types.ts  utils.ts
src/features/dashboard/: index.ts
src/features/gaze/: constants.ts  index.ts  types.ts  utils.ts
src/features/participants/: index.ts
src/features/reports/: index.ts
src/features/settings/: index.ts
src/features/splash/: index.ts
src/lib/: api.ts  skiplist.ts  utils.ts
src/shared/: ai.ts  loading.ts  prefs.ts  tauriClient.ts  type.ts
(+45 files in other folders)
